Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,18 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 15rem;
+        padding: 7rem 15rem;
     }
 
     h1 a {
         color: #fff;
         text-decoration: none;
+        font-size: 3.5rem;
     }
+
+.fa {
+    padding: 1%;
+}
 
 nav {
   display: flex;
@@ -39,10 +44,18 @@ nav {
 
 section {
     display: grid;
-    grid-template-columns: repeat(autofit, minmax(100vw, 2fr));
-    grid-template-rows: repeat(autofit, minmax(100vh, 1fr));
-    padding: 50px;
+    grid-template-columns: repeat(autofit, minmax(min-content, 2fr));
+    grid-template-rows: repeat(autofit, minmax(min-content, 1fr));
+    padding: 150px;
     margin: 50px 0;
+    }
+
+.workSection {
+    display: flex, grid;
+    grid-template-rows: repeat(autofit, minmax(min-content, 1fr));
+    grid-template-columns: repeat(autofit, minmax(min-content, 1fr));
+    justify-content: space-between;
+    align-items: center;
     }
 
 button {
@@ -66,6 +79,7 @@ h1 {
       
 h2 {
         padding: 15px 0;
+        text-decoration: underline;
     }
 
 .hidden {
@@ -80,13 +94,12 @@ h2 {
         filter: blur(0);
         transform: translateX(0);
     }
-      
-.workCards {
-        display: flex;
-        flex-direction: column;
-        padding: 10px 0;
-    }
-      
+
+.workSection {
+    display: flex;
+
+} 
+    
 .workCard:nth-child(1) {
         transition-delay: 100ms;
     }
@@ -110,5 +123,18 @@ h2 {
     }
       
 .about-image {
-        max-width: 50%;
+        max-width: 50vw;
     }
+
+.socIcons {
+    display: flex;
+    justify-content: end;
+    font-size: 150%;
+    }
+
+.footerText {
+    display: flex;
+    opacity: 0.2;
+    color: white;
+    justify-content: center;
+}
